--- a/README
+++ b/README
@@ -17,3 +17,9 @@ Heroku on the back-end.
 Hosting was done using Heroku.
 
 API used - https://docs.coinranking.com/
+
+Contributors:
+Qijin Chau (me)
+Samuel Saron
+Jerry Wang
+Ethan Schreiber
