--- a/README
+++ b/README
@@ -19,7 +19,7 @@ API used - https://docs.coinranking.com/
 
 
 Contributors:
-Qijin Chau (me)
+Qijin Chau
 Samuel Saron
 Jerry Wang
 Ethan Schreiber
